// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shortIdPlugin document DELETE /users/:_sid should return 200 1`] = `
Array [
  "ok",
  "n",
]
`;

exports[`shortIdPlugin document DELETE /users/:_sid should return 200 2`] = `
Object {
  "n": 1,
  "ok": 1,
}
`;

exports[`shortIdPlugin document GET /users/:_sid should not disrupt existing behavior 1`] = `
Array [
  "_id",
  "firstName",
  "lastName",
  "email",
  "device",
  "_sid",
]
`;

exports[`shortIdPlugin document GET /users/:_sid should not disrupt existing behavior 2`] = `
Object {
  "device": "1a1a836f1cf9087b520148de",
  "email": "john.doe@gmail.com",
  "firstName": "John",
  "lastName": "Doe",
}
`;

exports[`shortIdPlugin document GET /users/:_sid should return 200 1`] = `
Array [
  "_id",
  "firstName",
  "lastName",
  "email",
  "device",
  "_sid",
]
`;

exports[`shortIdPlugin document GET /users/:_sid should return 200 2`] = `
Object {
  "device": "1a1a836f1cf9087b520148de",
  "email": "john.doe@gmail.com",
  "firstName": "John",
  "lastName": "Doe",
}
`;

exports[`shortIdPlugin document PATCH /users/:_sid should return 200 1`] = `
Array [
  "_id",
  "firstName",
  "lastName",
  "email",
  "device",
  "_sid",
]
`;

exports[`shortIdPlugin document PATCH /users/:_sid should return 200 2`] = `
Object {
  "device": "1a1a836f1cf9087b520148de",
  "email": "john.doe@gmail.com",
  "firstName": "Laura",
  "lastName": "Doe",
}
`;
